--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "defaults"
     ],
     "config": {
-        "posts_per_page": 25,
+        "posts_per_page": 3,
         "image_sizes": {
             "xxs": {
                 "width": 30
@@ -134,7 +134,8 @@
             "color_scheme": {
                 "type": "select",
                 "options": [
-                    "Light"
+                    "Light",
+                    "Dark"
                 ],
                 "default": "Light"
             },
